--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
-<html>
-  <head>
-    <link href="/assets/bootstrap/css/bootstrap.css" media="screen" rel="stylesheet" type="text/css"/>
-    <title>Apache Tapestry: {{ page.title }}</title>
-    </head>
-  <body>
+<title>{{ page.title }}</title>
+<link href="/assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+<link href="/assets/site.css" rel="stylesheet" type="text/css"/>
+<script type="text/javascript" src="/assets/jquery-1.8.2.js"></script>
+<script type="text/javascript" src="/assets/bootstrap/js/bootstrap.js"></script>
+
 
