--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,12 +1,20 @@
-<div class="navbar">
-  <div class="container">
+<div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
-      <a class="brand" href="http://tapestry.apache.org">Apache Tapestry</a>
+        <a class="brand" href="http://tapestry.apache.org">Apache Tapestry</a>
       <ul class="nav">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Downloads</a></li>
+        <li><a href="#">Getting Started</a></li>
         <li><a href="#">Documentation</a></li>
+        <li><a href="#">Download</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Community</a></li>
+        <li>
+      <form class="form-search navbar-form pull-right" action="http://tapestry.apache.org/search.html" method="get">
+        <input type="text" name="q" class="input-medium xsearch-query" placeholder="Search this site"/>
+        <button type="submit" class="btn btn-mini">Search</button>
+      </form>
+      <br/>
+        </li>
       </ul>
-    </div>
   </div>
 </div>
