Add the "quickstart bar"

--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -7,6 +7,7 @@
 {% include navbar.html %}
 
 <div class="container">
+
 <div class="row project-synopsis">
       <img class="pull-left" src="/assets/tapestry-logo.png" alt="Tapestry Logo" class="media-object"/>
       <div>Component oriented framework for creating dynamic, robust, highly scalable web applications in Java.</div>
@@ -28,6 +29,8 @@ Have your cake and eat it too: the speed and depth of Java, the agile developmen
 Simple POJO classes, streamlined templates, live class reloading, state-of-the-art exception reporting, first-class Ajax support, and a big library of 
 built-in components: Tapestry is designed from the ground up to give you great productivity.
 </p></div></div>
+
+{% include quickstart.html %}
 
 {{ content }}
 
