--- a/assets/site.css
+++ b/assets/site.css
@@ -1,3 +1,17 @@
 body {
    padding-top: 50px;
 }
+
+.quickstart-bar {
+    background-color: #569d2f;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin: 15px 0px;
+}
+
+.quickstart-bar a {
+    color: white;
+    font-size: 10pt;
+    text-decoration: underline;
+}
