Add the launch boxes: "Download", "Extensions", and "Demos"

--- a/_includes/quickstart.html
+++ b/_includes/quickstart.html
@@ -1,3 +1,3 @@
-<div class="quickstart-bar alert">
+<div class="quickstart-bar">
   <p><strong>We think you will love Tapestry!</strong> Give us 20 minutes and <a href="/getting-starting.html">follow our quickstart guide</a>.</p>
 </div>
