--- a/assets/site.css
+++ b/assets/site.css
@@ -8,8 +8,10 @@ body {
     color: white;
     text-align: center;
     padding: 10px;
-    margin: 15px 0px;
-    text-shadow: none;
+    width: 100%;
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
 }
 
 .quickstart-bar a {
