Download jQuery and Bootstrap from CDN Small adjustments to splash page Add drop shadow to .container

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,8 @@
 <title>{{ page.title }}</title>
-<link href="/assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="/assets/site.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="/assets/jquery-1.8.2.js"></script>
-<script type="text/javascript" src="/assets/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
+
 
 
