--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -36,7 +36,7 @@ built-in components: Tapestry is designed from the ground up to give you great p
 <div class="row">
     <div class="launch">
       <h4 class="launch-download">Download Tapestry&nbsp;5</h4>
-      <p>Download the latest <strong><a href="#">Tapestry 5.3.6</a></strong> release.</p>
+      <p>Download the latest <strong><a href="#">Tapestry&nbsp;5.3.6</a></strong> release.</p>
       <div class="launch-more">
         <a href="/downloads.html">more downloads</a>
       </div>
