--- a/_includes/tail.html
+++ b/_includes/tail.html
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well well-small">
   <small>&copy; 2012 <a href="http://www.apache.org/">Apache Software Foundation</a></small>
 </div>
 
