--- a/assets/site.css
+++ b/assets/site.css
@@ -1,5 +1,5 @@
 body {
-   padding-top: 50px;
+   padding-top: 40px;
 }
 
 /** Meant to be used with .alert, for the rounded look. */
@@ -8,7 +8,6 @@ body {
     color: white;
     text-align: center;
     padding: 10px;
-    width: 100%;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
@@ -18,4 +17,16 @@ body {
     color: white;
     font-size: 10pt;
     text-decoration: underline;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #569D2F;
+}
+
+.container {
+    width: 948px;
+    padding: 0px 4px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
