--- a/assets/splash.css
+++ b/assets/splash.css
@@ -18,6 +18,7 @@
    margin-left: 10px;
    height: 200px;
    position: relative;
+   left: 10px;
    border-left: 1px dotted black;
    padding-left: 4px;
 }
@@ -25,7 +26,6 @@
 .launch:first-child {
   margin-left: none;
   border-left: none;
-  padding-left: none;
 }
 
 .launch h4 {
@@ -40,6 +40,7 @@
 .launch ul, .launch p {
   font-size: 8pt;
   padding: 0px 15px;
+  text-align: justify;
 }
 
 .launch-download {
