--- a/assets/site.css
+++ b/assets/site.css
@@ -7,7 +7,16 @@ body {
     background-color: #569d2f;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 4px;
+    line-height: 15px;
+    font-size: 10pt;
+}
+
+.quickstart-bar p {
+ margin: 0px;
+}
+
+.curved-edges {
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
