Re-shuffle template to get layout right

--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -34,40 +34,9 @@ built-in components: Tapestry is designed from the ground up to give you great p
 
 {% include quickstart.html %}
 
+<div class="pull-right">
 
-<div class="row">
-    <div class="launch">
-      <h4 class="launch-download">Download Tapestry&nbsp;5</h4>
-      <p>Download the latest <strong><a href="#">Tapestry&nbsp;5.3.6</a></strong> release.</p>
-      <div class="launch-more">
-        <a href="/downloads.html">more downloads</a>
-      </div>
-    </div>
-    <div class="launch">
-        <h4 class="launch-extensions">Tapestry&nbsp;5 Extensions</h4>
-        <p>From the community:</p>
-        <ul>
-          <li><a href="#">Tynamo</a></li>
-          <li><a href="#">Chenillekit</a></li>
-          <li><a href="#">Tapx</a></li>
-        </ul>
-        <div class="launch-more">
-          <a href="/community.html">more modules</a>
-        </div>
-      </div>
-    <div class="launch">
-      <h4 class="launch-demos">Tapestry&nbsp;5 Demos</h4>
-      <p>On-line demos available:</p>
-      <ul>
-        <li><a href="#">Hotel Booking</a></li>
-        <li><a href="#">JumpStart</a></li>
-      </ul>
-      <div class="launch-more">
-        <a href="/demos.html">more demos</a>
-      </div>
-    </div>
-
-<div class="twitter-container pull-right">
+<div class="twitter-container">
 
 <script>
 new TWTR.Widget({
@@ -101,8 +70,49 @@ new TWTR.Widget({
   }
 }).render().start();
 </script>
-</div>
-</div>
+
+</div> <!-- .twitter-container -->
+</div> <!-- .pull-right -->
+
+<div>
+    <div class="launch">
+      <h4 class="launch-download">Download Tapestry&nbsp;5</h4>
+      <p>Download the latest <strong><a href="#">Tapestry&nbsp;5.3.6</a></strong> release.</p>
+      <div class="launch-more">
+        <a href="/downloads.html">more downloads</a>
+      </div>
+    </div>
+
+    <div class="launch">
+      <h4 class="launch-extensions">Tapestry&nbsp;5 Extensions</h4>
+      <p>From the community:</p>
+      <ul>
+        <li><a href="#">Tynamo</a></li>
+        <li><a href="#">Chenillekit</a></li>
+        <li><a href="#">Tapx</a></li>
+      </ul>
+      <div class="launch-more">
+        <a href="/community.html">more modules</a>
+      </div>
+    </div>
+
+    <div class="launch">
+      <h4 class="launch-demos">Tapestry&nbsp;5 Demos</h4>
+      <p>On-line demos available:</p>
+      <ul>
+        <li><a href="#">Hotel Booking</a></li>
+        <li><a href="#">JumpStart</a></li>
+      </ul>
+      <div class="launch-more">
+        <a href="/demos.html">more demos</a>
+      </div>
+    </div>
+    </div>
+<br clear="left"/>
+
+    <p>More content below the launch panes.</p>
+
+<br clear="right"/>
 
 {{ content }}
 
