Add "What is Tapestry 5?" section

--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -72,6 +72,14 @@ new TWTR.Widget({
 </script>
 
 </div> <!-- .twitter-container -->
+
+<h4>
+  <a href="#">Latest News</a>
+  <img src="/assets/feed-icon.gif" alt="RSS"/>
+</h4>
+
+<p>News feed coming soon ...</p>
+
 </div> <!-- .pull-right -->
 
 <div>
@@ -110,9 +118,57 @@ new TWTR.Widget({
     </div>
 <br clear="left"/>
 
-    <p>More content below the launch panes.</p>
+<h3>What is Tapestry 5?</h3>
 
-<br clear="right"/>
+<div class="property-row">
+  <div class="property">
+    <h3 class="purejava">Pure Java and Polyglot</h3>
+    <p>Written in pure Java: code your pages and components in Java, Groovy, or Scala.</p>
+  </div>
+
+  <div class="property">
+    <h3 class="convention">Convention over Configuration</h3>
+    <p>Say goodbye to endlessXML configuration files: dependency injection and meta-programming through annotations and naming conventions.</p>
+  </div>
+</div>
+
+<div class="property-row">
+  <div class="property">
+    <h3 class="productive">Highly Productive</h3>
+    <p>Live class reloading means that the time btween seeing an error and providing the fix is seconds, not minutes.</p>
+  </div>
+  <div class="property">
+    <h3 class="scalable">Scalable</h3>
+    <p>Scales up big on a single server, and works great in a cluster. Keeps session state minimal by design.</p>
+  </div>
+</div>
+
+<div class="property-row">
+  <div class="property">
+    <h3 class="exceptionreporting">Advanced Exception Reporting</h3>
+    <p>Gives you all the tools you need to fix your problem: not just a stack trace, but every bit of information you need to know about what Tapestry was doing, why it was doing it, what went wrong, and how to fix it.
+    </p>
+  </div>
+  <div class="property">
+    <h3 class="testable">Testable</h3>
+    <p>Committed to testability throughout design; built-in utilities to enhance TDD. Support for <a href="http://seleniumhq.org/">Selenium</a> 
+      for integration testing.</p>
+  </div>
+</div>
+
+<div class="property-row">
+  <div class="property">
+    <h3 class="fast">Fast</h3>
+    <p>Pure Java; no reflection, not even for property expressions. Built to cleanly support large numbers of concurrent threads without contention. Integrated GZip content compression, JavaScript aggregation and compression, and client-side caching.
+    </p>
+  </div>
+  <div class="property">
+    <h3 class="modular">Adaptable and Modular</h3>
+<p>Architecture is open and extensible. There's a clean way to add your own extensions, or override built-in logic. Provides  integration   with <a href="http://hibernate.org/">Hibernate</a>, <a href="http://jcp.org/aboutJava/communityprocess/final/jsr317/index.html">JPA</a>, and <a href="http://www.springsource.org/">Spring</a>. Third-party integrations with other tools, such as <a href="http://www.quartz-scheduler.org/">Quartz</a> and <a href="http://lucene.apache.org/java/docs/index.html">Lucene</a>.</p>
+  </div>
+</div>
+
+<br clear="both"/>
 
 {{ content }}
 
