--- a/assets/site.css
+++ b/assets/site.css
@@ -33,6 +33,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #569D2F;
 }
 
+/* This is specifically for the "Latest News" RSS feed. */
+h4 a {
+  color: #569D2f !IMPORTANT;
+}
+
 .container {
     width: 948px;
     padding: 0px 4px;
