Add mini-logo to the navbar Add a site property for the Tapestry version Use the site.t5version property in the navbar, and elsewhere

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,8 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
-        <a class="brand" href="http://tapestry.apache.org">Apache Tapestry</a>
+        <a class="brand" href="http://tapestry.apache.org">
+          <img src="/assets/nav-logo.png" alt="Logo"/>
+          Apache Tapestry {{ site.t5version }}</a>
       <ul class="nav">
         <li><a href="#">Home</a></li>
         <li><a href="#">Getting Started</a></li>
