--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -85,7 +85,7 @@ new TWTR.Widget({
 <div>
     <div class="launch">
       <h4 class="launch-download">Download Tapestry&nbsp;5</h4>
-      <p>Download the latest <strong><a href="#">Tapestry&nbsp;5.3.6</a></strong> release.</p>
+      <p>Download the latest <strong><a href="#">Tapestry&nbsp;{{ site.t5version }}</a></strong> release.</p>
       <div class="launch-more">
         <a href="/downloads.html">more downloads</a>
       </div>
